2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gmount.[ch]:
        * gunionvolumemonitor.c:
        * gvolume.c:
	Add and document g_mount_is_shadowed plus calls
	to set/unset a mount as shadowed
	
2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/tests/g-icon.c: Comment out two failing tests

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 555486 – No way to recover command line from GAppInfo

	* gio.symbols:
	* gappinfo.[hc]: Add g_app_info_get_commandline. Requested
	by Hans Petter Jansson.
	
	* gdesktopappinfo.c: And implement it here.

2008-11-28  Christian Dywan  <christian@imendio.com>

	* gappinfo.c: Fix a typo, s/detext/detect. Patch by Enrico Tröger.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559633 – gtk_image_new_from_gicon does not always work for
	.desktop files

	* gdesktopappinfo.c (g_desktop_app_info_new_from_keyfile): Ignore
	extensions on icon names.  Proposed by Axel von Bertoldi.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 548163 – Nautilus displays wrong error message for too long file
	names

	* glocalfile.c (g_local_file_set_display_name): Correctly set
	error conditions if the new name is e.g. too long. Reported
	by Leonardo Ferreira Fontenelle.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 547481 – g_data_input_stream_read_line behaves not as stated in
	the docs

	* gdatainputstream.c (g_data_input_stream_read_line): Behave as
	documented and include the line end in the returned string. 
	Pointed out by Paul Pogonyshev.

	* tests/data-input-stream.c: Fix the read_line test to test the
	documented behaviour.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c (g_app_info_can_delete): Only allow deleting
	files that have been created by g_app_info_create_from_commandline.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>
